CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

PROJECT (HDF5Wrapper)

SET (DU_VERSION_MAJOR 0)
SET (DU_VERSION_MINOR 1)

SET (CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake-modules")

SET (CMAKE_VERBOSE_MAKEFILE "ON")

#set (CMAKE_CXX_FLAGS "-g -O0 ")

SET (CMAKE_ROOT "/usr")
SET (HDF5_INCLUDE_DIRS "${CMAKE_ROOT}/include/hdf5/serial")
SET (HDF5_C_LIBRARIES "${CMAKE_ROOT}/lib/x86_64-linux-gnu/libhdf5_serial.so")
SET (HDF5_CXX_LIBRARIES "${CMAKE_ROOT}/lib/x86_64-linux-gnu/libhdf5_cpp.so")

set (CMAKE_CXX_FLAGS "-g -O0 ")

INCLUDE_DIRECTORIES (${HDF5_INCLUDE_DIRS})
MESSAGE(STATUS "Setting ${HDF5_INCLUDE_DIRS}")

ADD_SUBDIRECTORY (src)
ADD_SUBDIRECTORY (examples)

